--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,6 @@ h2{
   margin-left:25px !important;
 }
 .swiper-button-prev:after, .swiper-button-next:after{
-  color: #336159 !important;
+  color: #A91E22 !important;
   content: '';
 }
